# class-codes-piaic-q3

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  differentiation.md  main.rs
Salman_Qureshi-PIAIC151848/: Cargo.toml  Differentiate between Multi-threading and Async Programming in rust.md
Salman_Qureshi-PIAIC151848/src/: main.rs
actix_hello_world/: .env  Cargo.toml  Dockerfile  RaspberryPi_Deployment.md  deploy  lightsail.json
actix_hello_world/src/: main.rs
actix_hello_world/static/: about.html  contact.html  index.html  products.html  services.html  styles.css
actix_mongo_app/: .env  Cargo.toml
actix_mongo_app/src/: main.rs
assign1_piaic84325/: Cargo.toml
assign1_piaic84325/src/: main.rs
assign2/: Cargo.toml  README.md
assign2/src/: main.rs
assign3/: .gitignore  Cargo.toml
assign3/src/: main.rs
assign4/: Cargo.toml
assign4/src/: main.rs
assign4/static/: about.html  contact.html  index.html  products.html  profile.html  settings.html
assign_1/: Cargo.toml
assign_1/src/: difference.md  main.rs
assignment1/: Cargo.toml  difference.md
assignment1/src/: main.rs
assignment_1/: Cargo.toml  README.md  Readme.md  assignment1.txt  differentiation.md  diffrence.md  main.rs
assignment_1/src/: async_vs_multi-thread.md  main.rs
assignment_2/: Cargo.toml
assignment_2/src/: main.rs
assignment_3/: .env  Cargo.toml  ReadMe.md  mongodb.js
assignment_3/src/: main.rs
assignment_4/: Cargo.toml
assignment_4/src/: main.rs
assignment_4/static/: about.html  contact.html  index.html  products.html  profile.html  settings.html
assignment_4/static/styles/: about.css  categories.css  contact.css  footer.css  header.css  index.css  products.css  settings.css
async_rust/: Cargo.toml
async_rust/src/: main.rs
aysnc-rust/: Cargo.toml
aysnc-rust/src/: main.rs
documents/: Course-outline - PIAIC-AIoT-Q3-Batch4-X.docx
hyper_rust/: Cargo.toml
hyper_rust/src/: main.rs
mongo_rust/: Cargo.toml
mongo_rust/src/: main.rs
reqwest-rust/: Cargo.toml
reqwest-rust/src/: main.rs
src/: main.rs
