[package]
name = "actix_mongo_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-rt = "1.1.1"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]