[package]
name = "rust-mongo"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0"
tokio = { version = "1.11.0", features = ["full"] }
bson = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"