[package]
name = "assignment_1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.16"
rand = "0.8.0"
threadpool = "1.0"
tokio = { version = "0.3.7", features = ["full"] }



