[package]
name = "assignment_3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
mongodb = "2.0.0"
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
