[package]
name = "mongo_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0"
tokio = { version = "1.11.0", features = ["full"] }
bson = "0.14.1"
serde = { version = "1.0", features = ["derive"] }