[package]
name = "reqwest-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }

tokio = { version = "0.2", features = ["macros"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
#futures = "0.3.1"